# netex-siri2lc

./: LICENSE  README.md  netex-siri2lc-plan.md  pyproject.toml  requirements.txt  results.csv  results_summary.csv
benchmarks/: METRICS.md  RESULTS_TEMPLATE.md  benchmark.py  visualize.py
docs/: ENTUR_BENEFITS.md
netex2lc/: __init__.py  cli.py  config.py  jsonld.py  logging_config.py  models.py  netex_parser.py  serializers.py  uri.py  validation.py  xml_utils.py
siri2lc/: __init__.py  __main__.py  cli.py  siri_parser.py  siri_sx_parser.py  siri_vm_parser.py
testdata/: README.md
testdata/netex/: Netex_09.2_Bus_SimpleTimetable_Slovenia.xml
testdata/output/netex/: netex_01.1_connections.jsonld  netex_01.2_connections.jsonld  netex_09.2_connections.jsonld
testdata/output/siri/: siri_et_connections.jsonld
testdata/siri/: exs_stopMonitoring_request.xml  exs_stopMonitoring_response.xml  ext_estimatedTimetable_request.xml  ext_estimatedTimetable_response.xml  exv_vehicleMonitoring_request.xml  exv_vehicleMonitoring_response.xml  exx_situationExchange_request.xml  exx_situationExchange_response.xml
tests/: __init__.py  conftest.py  test_benchmark.py  test_config.py  test_models.py  test_netex_parser.py  test_serializers.py  test_siri_parser.py  test_uri.py  test_validation.py  test_xml_utils.py
